--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ buildscript {
         supportAppCompat = "com.android.support:appcompat-v7:$supportVersion"
 
         rxJava = 'io.reactivex.rxjava2:rxjava:2.1.3'
+
+        preconditions = "com.github.IVIanuu:Preconditions:1.0.0"
     }
 
     repositories {
@@ -46,6 +48,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
