--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -18,7 +18,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
         applicationId "com.ivianuu.rxcontentobserver.sample"
         minSdkVersion rootProject.ext.minSdkVersion
@@ -26,17 +25,15 @@ android {
         versionCode 1
         versionName "1.0"
     }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
 }
 
 dependencies {
-    // RxContentObserver
-    implementation project(':rxcontentobserver')
-
     // Android Support
     implementation rootProject.ext.supportAppCompat
+
+    // Kotlin
+    implementation rootProject.ext.kotlinStdlib
+
+    // RxContentObserver
+    implementation project(':rxcontentobserver')
 }
