--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -17,22 +17,22 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
+    compileSdkVersion Versions.compileSdk
     defaultConfig {
         applicationId "com.ivianuu.rxcontentobserver.sample"
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion Versions.minSdk
+        targetSdkVersion Versions.targetSdk
+        versionCode Versions.versionCode
+        versionName Versions.versionName
     }
 }
 
 dependencies {
     // Android Support
-    implementation rootProject.ext.supportAppCompat
+    implementation Deps.supportAppCompat
 
     // Kotlin
-    implementation rootProject.ext.kotlinStdlib
+    implementation Deps.kotlinStdLib
 
     // RxContentObserver
     implementation project(':rxcontentobserver')
