--- a/rxcontentobserver/build.gradle
+++ b/rxcontentobserver/build.gradle
@@ -1,3 +1,6 @@
+import Deps
+import Versions
+
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'com.github.dcendents.android-maven'
